--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,6 +15,11 @@ a,
   transition: 0.4s;
 }
 
+a,  /*custom*/
+.white {
+  color: white;
+}
+
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
